docs: fix links

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -1314,8 +1314,9 @@ in your table as a CSV for further analysis.
 
 The new `chalk.functions` module contains several helper functions for feature computation. For example, if you have a
 feature representing a raw value in GZIP-compressed value, you can use [`gunzip`](/api-docs#gunzip) with an underscore
-reference to create an unzipped feature. The full list of available functions can be found at the bottom of our
-[expression documentation](/docs/expression#additional-functions).
+reference to create an unzipped feature. The full list of available functions
+can be found in our
+[expression documentation](/api-docs#section-Chalk%20Functions).
 
 ### JSON feature type
 
