--- a/notebook-development.mdx
+++ b/notebook-development.mdx
@@ -243,7 +243,7 @@ Director.average_movie_runtime_filtered = _.movies[
 ### Using Chalk Functions
 
 Chalk exposes a number of functions that can be called and composed as part of expressions—a full list of these functions
-can be found on our [expressions page](/docs/expression#additional-functions).
+can be found in our [expressions docs](/api-docs#section-Chalk%20Functions).
 
 Below, we provide a few examples of how these functions can be used to create new features:
 
