Insert line breaks, year

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -6,7 +6,7 @@ description: Updates to Chalk!
 published: true
 ---
 
-## July 30
+## July 30, 2025
 
 ### Chalk diff viewer
 
@@ -41,6 +41,8 @@ When exploring a feature like User, you can now run online queries that include 
 - Aggregation backfills, which can be viewed from Chalk's Offline Query page now also include a table of the features that have been persisted with the backfill into your online store
 - Errors encountered while deploying a branch now bubble up to the branch deployment page in the Chalk Dashboard
 - Deactivated users are now visible in UI for more efficient management of inactive accounts
+
+---
 
 ## June 23, 2025
 
