docs: clarify redshift data source

--- a/redshift.mdx
+++ b/redshift.mdx
@@ -23,6 +23,12 @@ Redshift database:
 
 <AddRedshiftIntegration onSubmit={(e) => e.preventDefault()} />
 
+As part of the Redshift configuration, you will be prompted to also provide an IAM role and a 
+S3 bucket. The IAM role would be assumed by Redshift to do basic operations (get, put, list objects) 
+in the S3 bucket provided. The S3 bucket itself does not require versioning, but you can 
+set a retention policy on the bucket. The retention policy should be somewhere from 1 - 14 days, 
+to balance storage efficiency with history that can be useful in debugging. 
+
 ## Single Integration
 
 If you have only one Redshift connection that you'd like
